your short and sweet commit message

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Ambica Pharma - Leading Pharmaceutical Manufacturer</title>
     <meta name="description" content="Ambica Pharma is a leading pharmaceutical company manufacturing high-quality medicines, tablets, capsules, injectables, and drops with WHO-GMP standards." />
     <meta name="author" content="Ambica Pharma" />
+    <meta name="google-site-verification" content="aeyZni3K0snO5KuyIGrofZih24QiU4K4TsbGBieI6Lk" />
     <meta name="keywords" content="pharmaceutical manufacturer, Ambica Pharma, medicine manufacturer, pharmaceutical company India, healthcare, tablets, capsules, injectables, WHO-GMP, ISO 9001, pharmaceutical exporter" />
 
     <!-- Open Graph Tags -->
